Added lazy-loading of admin feature-modules to front-end

--- a/app-public/src/app/admin/admin-base-component/admin-base-component.component.html
+++ b/app-public/src/app/admin/admin-base-component/admin-base-component.component.html
@@ -1,5 +1,5 @@
 <div class="ui top attached demo menu">
-  <a class="item toggler inverted">
+  <a class="item toggler inverted" (click)="toggle()">
     <i class="sidebar icon"></i>Menu
   </a>
   <a class="item right floated ui dropdown">
@@ -11,37 +11,6 @@
     </div>
   </a>
 </div>
-<div class="ui bottom attached segment pushable">
-  <div class="ui labeled icon vertical sidebar menu" style="width: 14vh">
-    <a class="item">
-      <i class="home icon"></i>
-      Home
-    </a>
-    <a class="item">
-      <i class="file alternate icon"></i>
-      Articles
-    </a>
-    <a class="item">
-      <i class="podcast icon"></i>
-      Podcasts
-    </a>
-    <a class="item">
-      <i class="microphone icon"></i>
-      Interviews
-    </a>
-    <a class="item">
-      <i class="chart line icon"></i>
-      Analytics
-    </a>
-  </div>
-  <div class="pusher">
-    <div class="ui basic segment" style="height:100vh;">
-      <h3 class="ui header">Application Content</h3>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-  </div>
-</div>
+
+
 
