--- a/app-public/src/app/admin/admin-analytics/admin-analytics.component.html
+++ b/app-public/src/app/admin/admin-analytics/admin-analytics.component.html
@@ -1,1 +1,9 @@
-<p>admin-analytics works!</p>
+<div class="ui bottom attached segment pushable">
+  <app-admin-sidebar></app-admin-sidebar>
+  <div class="pusher">
+    <div class="ui basic segment">
+      <h3 class="ui header">Application Content</h3>
+      <p>admin-analytics works!</p>
+    </div>
+  </div>
+</div>
