--- a/app-public/src/app/admin/admin-home/admin-home.component.html
+++ b/app-public/src/app/admin/admin-home/admin-home.component.html
@@ -3,9 +3,7 @@
   <div class="pusher">
     <div class="ui basic segment">
       <h3 class="ui header">Application Content</h3>
-      <p>admin-article works!</p>
+      <p>admin-home works!</p>
     </div>
   </div>
 </div>
-
-
