Added forms for creating new articles

--- a/app-public/src/app/app.component.html
+++ b/app-public/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-admin></app-admin>
+<app-public></app-public>
 <router-outlet></router-outlet>
