Added views for podcasts,reviews ad interviews

--- a/app-public/src/app/admin/admin-article/admin-article.component.html
+++ b/app-public/src/app/admin/admin-article/admin-article.component.html
@@ -1,3 +1,4 @@
+<app-admin-base-component></app-admin-base-component>
 <div class="ui bottom attached segment pushable">
   <app-admin-sidebar></app-admin-sidebar>
   <div class="pusher">
