--- a/app-public/src/app/public/public-interview/interview-display/interview-display.component.html
+++ b/app-public/src/app/public/public-interview/interview-display/interview-display.component.html
@@ -1,19 +1,25 @@
 <div class="ui fluid card">
   <div class="ui grid">
     <div class="row">
-      <div class="eight wide column">
-        <div class="ui slide masked reveal fluid image">
+      <div class="six wide column">
+        <div class="ui slide masked reveal image">
           <img src="assets/img/w.jpg" class="visible content">
-          <div class="hidden content"><p>Description</p></div>
+          <div class="hidden content"><p style="padding: 2vh;">Description</p></div>
         </div>
       </div>
-      <div class="eight wide column cont">
+      <div class="ten wide column cont">
         <div class="content">
           <div class="meta">
             <span class="date">4/5/2020 |</span>
             <span class="time">5 min</span>
           </div>
           <a class="header"> <h3>Interview:The Paper Crafts</h3></a>
+          <div class="description">
+            <p>Interview:The Paper CraftsInterview:The Paper CraftsInterview:The Paper Crafts
+               Interview:The Paper CraftsInterview
+            </p>
+            <a href="" class="read-more">Watch/Listen</a>
+          </div>
         </div>
         <div class="ui divider">
         <div class="extra content">
