--- a/app-public/src/app/public/public-interview/public-interview.component.html
+++ b/app-public/src/app/public/public-interview/public-interview.component.html
@@ -11,8 +11,13 @@
 <div class="section">
 	<div class="ui grid">
 		<div class="row">
-			<div class="ten wide column">
-				<app-interview-display></app-interview-display>
+			<div class="eleven wide column" >
+				<div class="interview-display">
+					<app-interview-display ></app-interview-display>
+				</div>	
+				<div class="interview-display">
+					<app-interview-display ></app-interview-display>
+				</div>			
 			</div>
 		</div>
 	</div>
