--- a/app-public/src/app/public/public-podcast/public-podcast.component.html
+++ b/app-public/src/app/public/public-podcast/public-podcast.component.html
@@ -8,10 +8,19 @@
 		</div>
 </div>
 <hr>
-<div class="section">
+<div class="pod-section">
 	<div class="ui grid">
 		<div class="row">
-			
+			<div class="eleven wide column">
+				<app-podcast-display></app-podcast-display>
+				<hr>
+				<app-podcast-display></app-podcast-display>
+				<hr>
+				<app-podcast-display></app-podcast-display>
+				<hr>
+				<app-podcast-display></app-podcast-display>
+				<hr>
+			</div>
 		</div>
 	</div>
 </div>
