--- a/app-public/src/app/public/public-social/public-social.component.html
+++ b/app-public/src/app/public/public-social/public-social.component.html
@@ -8,10 +8,81 @@
 		</div>
 </div>
 <hr>
-<div class="section">
+<div class="pod-section" >
 	<div class="ui grid">
 		<div class="row">
-			
+			<div class="three wide column">
+			</div>
+			<div class="eleven wide column">
+				<div class="ui grid row">
+					<div class="four wide column">
+						<div class="icon-wrapper" >
+							<i class="ui huge facebook icon"></i>
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="icon-wrapper">
+							<i class="ui huge twitter icon"></i>
+						</div>	
+					</div>
+					<div class="four wide column">
+						<div class="icon-wrapper">
+							<i class="ui huge instagram icon"></i>
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="icon-wrapper">
+							<i class="ui huge google icon"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="sixteen wide column">
+				<div class="review-section">
+					<div class="ui grid">
+						<div class="row">
+							<div class="three wide column">
+								<h2>CONTACT <br>US</h2>
+								<p style="margin-bottom: -1vh;">info@mysite.com</p>
+							</div>
+							<div class="two wide column ">
+								<div class="bar"></div>
+							</div>
+							<div class="eleven wide column">
+								<form class="ui form">
+									<div class="ui fields">
+										<div class="six wide field">
+											<div class="ui field">
+												<label></label>
+											    <input type="text" name="" class="input" placeholder="Name">
+											</div>
+											<div class="ui field">
+												<label></label>
+											    <input type="text" name="" class="input" placeholder="Email">
+											</div>
+											<div class="ui field">
+												<label></label>
+											    <input type="text" name="" class="input" placeholder="Phone">
+											</div>
+										</div>
+										<div class="seven wide field">
+											<div class="ui field">
+												<label></label>
+											    <textarea type="text" name="message" class="input" placeholder="Enter your message here"></textarea>
+											    <input type="submit" name="SUBMIT" class="ui black button right floated">
+
+											</div>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+		
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
