--- a/app-public/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/app-public/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -7,11 +7,11 @@
       <i class="file alternate icon"></i>
       Articles
     </a>
-    <a class="item" routerLink = "/admin/podcasts">
+    <a class="item" routerLink = "/admin/podcast">
       <i class="podcast icon"></i>
       Podcasts
     </a>
-    <a class="item" routerLink = "/admin/interviews">
+    <a class="item" routerLink = "/admin/interview">
       <i class="microphone icon"></i>
       Interviews
     </a>
